# purine2

./: .gitignore  CMakeLists.txt  make.sh  parallel_config  run.sh  scp.sh
CMakeScripts/: FindAtlas.cmake
caffeine/: io.cpp  io.hpp  math_functions.cu  math_functions.hpp
caffeine/proto/: caffe.pb.cc  caffe.pb.h
common/: common.cpp  common.hpp  loop.cpp  loop.hpp
composite/: composite.hpp  connectable.cpp  connectable.hpp  layer.cpp  layer.hpp  vectorize.hpp
composite/graph/: acc.hpp  all_reduce.hpp  asgd_data_parallel.hpp  asgd_net.hpp  compute_loss.hpp  concat.cpp  concat.hpp  copy.cpp  copy.hpp  data_parallel.hpp  fetch_image.cpp  fetch_image.hpp  local_fetch_image.cpp  local_fetch_image.hpp  split.cpp  split.hpp  update.cpp  update.hpp
composite/layers/: .inception.hpp.swp  concat_layer.hpp  conv_layer.hpp  diff_sum_layer.hpp  drop_inception.hpp  drop_layer.hpp  dropout_layer.hpp  inception.hpp  lrn_layer.hpp  (+3 more)
dispatch/: blob.cpp  blob.hpp  graph.cpp  graph.hpp  graph_template.hpp  node.cpp  node.hpp  op.cpp  op.hpp  op_template.hpp  runnable.cpp  runnable.hpp
examples/: CMakeLists.txt  asyn_nin_cifar10.cpp  asyn_nin_cifar10.hpp  google_cifar10.cpp  google_cifar10.hpp  google_cifar10_test.cpp  googlenet.cpp  googlenet.hpp  googlenet_test.cpp  googlenet_timing.cpp  mnist.cpp  mnist.hpp  nin_cifar10.cpp  nin_cifar10.hpp  nin_cifar10_test.cpp
operations/: operation.hpp  tensor.cpp  tensor.hpp
tests/: CMakeLists.txt  test_layers.cpp.bak
tools/: CMakeLists.txt  Makefile  cifar10_data.cpp  cmake_install.cmake  compute_image_mean.cpp  mnist_data.cpp
(+24 files in other folders)
